--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
   "name": "childentracking",
-  "version": "1.0.0",
-  "description": "",
-  "main": "tracking.js",
-  "scripts": {
+  
+"version": "0.0.1",
+  
+"description": "",
+ 
+ "main": "tracking.js",
+  
+"scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "avinash",
-  "license": "ISC",
-  "dependencies": {
-    "cookie-parser": "^1.4.3",
+  
+"author": "avinash",
+  
+"license": "ISC",
+  
+"dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
     "mongoose": "^4.12.4",
-    "passport": "^0.4.0",
-    "sqlite3": "^3.1.13"
+    "async": "latest",
+    "body-parser": "latest",
+    "cookie-parser": "^1.4.3",
+    "morgan": "latest",
+    "nedb": "latest",
+    "request": "latest",
+	"pdfkit": "latest",
+	"bluebird": "latest",
+	"request-promise": "latest"
   }
 }
