setting up project

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "childentracking",
   "version": "0.0.1",
-  "description": "",
+  "description": "Gdp Project",
   "main": "tracking.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,5 +24,14 @@
     "request": "latest",
     "request-promise": "latest",
     "sqlite3": "^3.1.13"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Akhila0729/CMS.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Akhila0729/CMS/issues"
+  },
+  "homepage": "https://github.com/Akhila0729/CMS#readme"
 }
