--- a/package.json
+++ b/package.json
@@ -1,35 +1,27 @@
 {
-  "name": "childentracking",
-  "version": "0.0.1",
-  "description": "Gdp Project",
-  "main": "tracking.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "avinash",
-  "license": "ISC",
+  "name": "cms",
+  "version": "1.0.0",
+  "description": "child monitoring system",
+  "main": "app.js",
   "dependencies": {
-    "async": "latest",
-    "bluebird": "latest",
-    "body-parser": "latest",
     "cookie-parser": "^1.4.3",
-    "ejs": "^2.5.6",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^4.12.4",
-    "morgan": "latest",
-    "nedb": "latest",
     "passport": "^0.4.0",
-    "pdfkit": "latest",
-    "request": "latest",
-    "request-promise": "latest",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Akhila0729/CMS.git"
   },
+  "author": "harnath",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Akhila0729/CMS/issues"
   },
