--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^4.12.4",
     "passport": "^0.4.0",
+    "parse": "latest",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {},
