--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "child monitoring system",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^4.12.4",
-    "passport": "^0.4.0",
+    "morgan": "^1.9.0",
     "parse": "latest",
+    "passport": "^0.4.0",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {},
