--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.9.0",
     "parse": "latest",
     "passport": "^0.4.0",
+    "passport-parse": "0.0.5",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {},
