--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "child monitoring system",
   "main": "app.js",
   "dependencies": {
+    "async": "^2.6.0",
+    "backendless": "^4.4.3",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
